--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "test:watch": "ng test --watch",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
