Added and configured eslint

--- a/angular.json
+++ b/angular.json
@@ -146,9 +146,21 @@
               "devServerTarget": "angular-app:serve:production"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "angular-app"
+  "defaultProject": "angular-app",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
