--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:watch": "ng test --watch",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "format:prettier": "npx prettier 'src/**/*.{js,jsx,ts,tsx,html,css,scss}' --write",
+    "lint:eslint": "npx eslint 'src/**/*.{js,jsx,ts,tsx,html,css}' --quiet --fix",
+    "lint": "npm run format:prettier && npm run lint:eslint"
   },
   "private": true,
   "dependencies": {
@@ -32,18 +35,31 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.0",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "cypress": "latest",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
-    "cypress": "latest"
+    "prettier": "^2.6.2",
+    "typescript": "~4.6.2"
   }
 }
