Added stylelint for linting scss files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
   },
   "eslint.validate": ["javascript", "typescript"],
   "workbench.tree.indent": 20,
@@ -11,4 +12,9 @@
   },
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "modifications",
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.enable": true,
+  "stylelint.validate": [ "scss"]
 }
