--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,9 @@
             "newlines-between": "always-and-inside-groups",
             "alphabetize": { "order": "asc", "caseInsensitive": true }
           }
-        ]
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
       }
     },
     {
