Added tests and pre-push hook

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,7 +78,8 @@
   "env": {
     "jest": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jasmine": true
   },
   "settings": {
     "import/resolver": {
