--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,8 @@
           }
         ],
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error"]
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-useless-constructor": ["error"]
       }
     },
     {
